crates/icydb-core/tests/ui/db/contracts_module_absent.rs
use icydb_core::db::contracts::canonical_value_compare;

fn main() {}
